<resources>
    <string name="app_name">Match Couple</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="chat">Chat</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="send">Send</string>
    <string name="login_account">Login Account</string>
    <string name="camera">Camera</string>
    <string name="create_group_chat">Create Group Chat</string>
    <string name="avatar">Avatar</string>
    <string name="search">Search</string>
    <string name="menu">Menu</string>
    <string name="_0">0</string>
    <string name="posts">Posts</string>
    <string name="follows">Follows</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="you">You</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="name">Name</string>
    <string name="image">Image</string>
    <string name="when_you_share_photos_and_videos_they_ll_appear_on_your_profile" translatable="true">When you share photos and videos they`ll appear on your profile</string>
    <string name="share_your_first_photo_or_video">Share your first photo or video</string>
    <string name="when_people_tag_you_in_photos_and_video_they_ll_appear_here">When people tag you in photos and video, they`ll appear here</string>
    <string name="photos_and_video_of_you">Photos and Video of You</string>
    <string name="add_post">Add Post</string>

    <string name="inactive">inactive</string>

    <string name="active">active</string>
    <string name="message">Message</string>
    <string name="please_send_first_message">Please! Send First Message</string>
    <string name="apply_avatar">Apply Avatar</string>
    <string name="delete_image">Delete Image</string>
    <string name="save_image">Save Image</string>
    <string name="message_delete">Message Delete</string>
    <string name="message_hidden">Message Hidden</string>
    <string name="favorite">favorite</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="text">Text</string>
</resources>