<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/item_chat"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/chat" />
    <item
        android:id="@+id/item_add"
        android:enabled="false"
        android:title="" />
    <item
        android:id="@+id/item_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile" />
    <item
        android:id="@+id/item_setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/setting" />
</menu>