<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BottomSheetStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_dialog"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="50dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:text="@string/log_out"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:outlineProvider="none"
        android:padding="20dp"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:outlineProvider="none"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="40dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@android:color/black" />
</LinearLayout>