<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/bt_apply_avatar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/black"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/apply_avatar"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/bt_delete_image"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_baseline_delete_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/black"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/delete_image"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/bt_save"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_baseline_cloud_download_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/black"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/save_image"
            android:textAllCaps="false"
            android:textColor="@color/black" />
    </LinearLayout>
</RelativeLayout>