<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        tools:ignore="UselessParent">

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true">

            <androidx.cardview.widget.CardView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="60dp">

                <ImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/avatar"
                    android:saveEnabled="true"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_status"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_gravity="bottom|right"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@color/green"
                app:cardCornerRadius="5dp"
                tools:ignore="RtlHardcoded" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignStart="@+id/frame_layout"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_chat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/tv_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="100dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/please_send_first_message"
            android:textColor="@color/gray"
            android:textSize="12sp" />
    </RelativeLayout>
</FrameLayout>