<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.edit_profile.EditProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:menu="@menu/menu_edit_profile"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:popupTheme="@style/Theme.MaterialComponents.Light"
        app:title="@string/edit_profile"
        app:titleTextColor="@color/black" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="100dp">

                    <ImageView
                        android:id="@+id/iv_avatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/avatar"
                        android:scaleType="centerCrop" />
                </androidx.cardview.widget.CardView>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <Button
                    android:id="@+id/bt_change_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:text="@string/change_profile_photo"
                    android:textAllCaps="false"
                    android:textColor="@color/blue"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="32dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="5dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/blue"
                        android:textColorHint="@color/blue" />
                </androidx.cardview.widget.CardView>
            </FrameLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</RelativeLayout>